# rosu-v2

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  output.txt
.github/workflows/: check.yml
generate-mods/: Cargo.toml  README.md
generate-mods/src/: error.rs  lib.rs  main.rs  model.rs  writer.rs
rosu-v2/: CHANGELOG.md  Cargo.toml
rosu-v2/src/: error.rs  lib.rs  routing.rs
rosu-v2/src/client/: builder.rs  mod.rs  token.rs
rosu-v2/src/model/: beatmap.rs  beatmap_.rs  comments.rs  comments_.rs  cursor.rs  event.rs  event_.rs  forum.rs  forum_.rs  grade.rs  kudosu_.rs  matches.rs  matches_.rs  mod.rs  mode.rs  mods_.rs  news.rs  news_.rs  ranking_.rs  score.rs  score_.rs  seasonal_backgrounds.rs  seasonal_backgrounds_.rs  user.rs  user_.rs  wiki_.rs
rosu-v2/src/model/mods/: acronym.rs  generated_mods.rs  intermode.rs  intersection.rs  iter.rs  macros.rs  manual.rs  mod.rs  mode_as_seed.rs
rosu-v2/src/request/: beatmap.rs  comments.rs  forum.rs  matches.rs  mod.rs  news.rs  ranking.rs  replay.rs  seasonal_backgrounds.rs  serialize.rs  user.rs  wiki.rs
rosu-v2/tests/: requests.rs  serde.rs
src/: error.rs  lib.rs  metrics.rs  ratelimiter.rs  routing.rs
src/client/: builder.rs  mod.rs  scopes.rs  token.rs
src/future/: mod.rs  request_generator.rs  stage.rs  token.rs  traits.rs
src/model/: beatmap.rs  beatmap_.rs  comments.rs  comments_.rs  cursor.rs  event.rs  forum.rs  forum_.rs  grade.rs  kudosu.rs  kudosu_.rs  matches.rs  matches_.rs  mod.rs  mode.rs  mods.rs  multiplayer.rs  news.rs  news_.rs  ranking.rs  ranking_.rs  recent_event.rs  recent_event_.rs  rkyv_impls.rs  score.rs  score_.rs  seasonal_backgrounds.rs  seasonal_backgrounds_.rs  serde_.rs  serde_util.rs  user.rs  user_.rs  wiki.rs  wiki_.rs
src/request/: beatmap.rs  comments.rs  event.rs  forum.rs  matches.rs  mod.rs  multiplayer.rs  news.rs  ranking.rs  replay.rs  score.rs  seasonal_backgrounds.rs  serialize.rs  user.rs  wiki.rs
src/request/beatmap/: beatmap.rs  beatmapset_events.rs  mod.rs  scores.rs  user_scores.rs
src/request/comments/: comments.rs  mod.rs
src/request/multiplayer/: highscore.rs  mod.rs  score.rs  scores.rs
src/request/ranking/: mod.rs  rankings.rs  spotlights.rs
src/request/user/: beatmap.rs  events.rs  kudosu.rs  mod.rs  most_played.rs  scores.rs  user.rs  users.rs
src/serde/: mod.rs  serde_approval_status.rs  serde_bool.rs  serde_date_mod.rs  serde_f32.rs  serde_genre.rs  serde_grade.rs  serde_language.rs  serde_mode.rs  serde_mods.rs  serde_scoring_type.rs  serde_team.rs  serde_team_type.rs  serde_u32.rs  serde_u64.rs
tests/: request.rs  requests.rs  serde.rs
