[package]
name          = "rosu-v2"
version       = "0.8.0"
description   = "An osu! API v2 wrapper"
readme        = "README.md"
keywords      = ["osu", "api", "wrapper"]
repository    = "https://github.com/MaxOhn/rosu-v2"
documentation = "https://docs.rs/rosu-v2/"
authors       = ["MaxOhn <ohn.m@hotmail.de>"]
edition       = "2021"
license       = "MIT"

# --- Features ---

[features]
default = ["cache", "macros"]
cache = ["dashmap"]
macros = ["rosu-mods/macros"]
replay = ["osu-db"]
serialize = []

# --- Dependencies ---

[dependencies]
bytes = { version = "1.0", default-features = false }
futures = { version = "0.3", default-features = false }
leaky-bucket-lite = { version = "0.5" }
log = { version = "0.4", default-features = false }
hyper = { version = "0.14", default-features = false, features = ["client"] }
hyper-rustls = { version = "0.24.1", default-features = false, features = ["http1", "http2", "native-tokio"] }
itoa = { version = "1.0.9" }
rosu-mods = { version = "0.1.0", features = ["serde"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std", "raw_value"] }
serde_urlencoded = { version = "0.7.1" }
smallstr = { version = "0.3.0", features = ["serde"] }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.0", default-features = false, features = ["macros"] }
url = { version = "2.0", default-features = false }

# --- Feature dependencies ---

dashmap = { version = "5.1", default-features = false, optional = true }
osu-db = { version = "0.3.0", optional = true }
metrics = { version = "0.21.1", optional = true }

# --- Dev dependencies ---

[dev-dependencies]
dotenv = { version = "0.15" }
env_logger = { version = "0.9" }
eyre = { version = "0.6" }
once_cell = { version = "1.7" }
tokio = { version = "1.0", default-features = false, features = ["rt", "macros"] }
