[package]
name = "generate-mods"
version = "0.1.0"
edition = "2021"

[dependencies]
itoa = { version = "1.0" }
minreq = { version = "2.10.0", default-features = false, features = ["https-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = { version = "1.0" }
